--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,16 +5,16 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-border mb-4">Join Us</legend>
+                <legend class="border-border mb-4">Log In</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already registered? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+                Need An Account?<a class="ml-2" href="{% url 'register' %}">Register</a>
             </small>
         </div>
     </div>
