--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,12 +4,35 @@
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
             <div class="media-body">
-                <div class="article-metadata">
-                    <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-                    <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
+                <div class="article-metadata d-flex justify-content-around">
+                    <div class="mr-auto p-2">
+                    <a class="mr-auto" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
+                    <small class="text-muted">{{ post.updated|date:"F d, Y" }}</small></div>
+                    {% if object.author != user %}
+                    <div class="p-2">
+                        <button class="btn btn-outline-info p-2" type="submit">Follow</button>
+                    </div>
+                    {% endif %}
                 </div>
-                <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+                <h3><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h3>
                 <p class="article-content">{{ post.content }}</p>
+                {% if post.image %}
+                <img class="img-fluid img-thumbnail wp-post-image" src="{{ post.image.url }}">
+                {% endif %}
+                <div class="content">
+                    <form action="{% url 'like-post' %}" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" name='post_id' value="{{post.id}}">
+                        <button class="btn btn-outline-info p-2" type="submit">
+                            {% if user.profile not in post.liked.all %}
+                                Like
+                            {% else %}
+                                Unlike
+                            {% endif %}
+                        </button>
+                        <strong>{{post.num_likes}} likes</strong>
+                    </form>
+                </div>
             </div>
         </article>
     {% endfor %}
